RESOLVED FIXED57708
[Qt] Style fix for QtMobileWebStyle.h
https://bugs.webkit.org/show_bug.cgi?id=57708
Summary [Qt] Style fix for QtMobileWebStyle.h
Diego Gonzalez
Reported 2011-04-02 12:07:54 PDT
Fix style drawControl and drawComplexControl prototype
Attachments
Patch (1.88 KB, patch)
2011-04-02 12:10 PDT, Diego Gonzalez
no flags
Diego Gonzalez
Comment 1 2011-04-02 12:10:19 PDT
Antonio Gomes
Comment 2 2011-04-03 19:32:42 PDT
Comment on attachment 87983 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=87983&action=review > Source/WebCore/platform/qt/QtMobileWebStyle.h:31 > + void drawControl(ControlElement, const QStyleOption*, QPainter*, const QWidget*) const; > + void drawComplexControl(ComplexControl, const QStyleOptionComplex*, QPainter*, const QWidget*) const; You are changing the default value, diego. It goes beyond style fixes :)
Alexis Menard (darktears)
Comment 3 2011-04-04 05:34:39 PDT
So it's r- no?
Antonio Gomes
Comment 4 2011-04-04 07:20:12 PDT
(In reply to comment #3) > So it's r- no? Not necesseraly. No everything needs to be r- if the contributor is a committer and patch has an issue. I r+ and expressed my concern, so it is just a matter of fixing it before landing.
Antonio Gomes
Comment 5 2011-04-04 07:20:48 PDT
(In reply to comment #4) > (In reply to comment #3) > > So it's r- no? > > Not necesseraly. No everything needs to be r- if the contributor is a committer and patch has an issue. I r+ and expressed my concern, so it is just a matter of fixing it before landing. Also it seems this default value is not used, since it did not break stuff to diego. So I do not really care this time.
Benjamin Poulain
Comment 6 2011-04-04 08:23:22 PDT
Comment on attachment 87983 [details] Patch Let's cq+...
WebKit Commit Bot
Comment 7 2011-04-04 08:26:53 PDT
Comment on attachment 87983 [details] Patch Rejecting attachment 87983 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'apply-..." exit_code: 2 Last 500 characters of output: Scripts/svn-apply', u'--reviewer', u'Antonio Gomes', u'--fo..." exit_code: 1 Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/platform/qt/QtMobileWebStyle.h Hunk #1 FAILED at 27. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/platform/qt/QtMobileWebStyle.h.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Antonio Gomes', u'--fo..." exit_code: 1 Full output: http://queues.webkit.org/results/8185955
Diego Gonzalez
Comment 8 2011-04-04 16:00:20 PDT
Thanks guys. I will commit it manually.
Diego Gonzalez
Comment 9 2011-04-06 08:43:54 PDT
Fixed at r83047
Note You need to log in before you can comment on or make changes to this bug.