2011-04-06  Diego Gonzalez  <diegohcg@webkit.org>

[Qt] Style fix for QtMobileWebStyle.h
    https://bugs.webkit.org/show_bug.cgi?id=57708

    Reviewed by Antonio Gomes.

    * platform/qt/QtMobileWebStyle.h:

Canonical link: https://commits.webkit.org/72827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83047 268f45cc-cd09-0410-ab3c-d52691b4dbfc